chore: update generated files to version 0.62.0. Bring back code from 58-compare-openapi-generation-from-json-schema-with-manually-curated-specification-fix-any-issues branch.