@@ -35,8 +35,11 @@ import java.util.stream.Stream;
 import static java.util.stream.Collectors.toList;
 import static org.brapi.schematools.core.response.Response.fail;
 import static org.brapi.schematools.core.response.Response.success;
+import static org.brapi.schematools.core.utils.BrAPITypeUtils.isRequest;
 import static org.brapi.schematools.core.utils.BrAPITypeUtils.unwrapType;
+import static org.brapi.schematools.core.utils.StringUtils.toParameterCase;
 import static org.brapi.schematools.core.utils.StringUtils.toSentenceCase;
+import static org.brapi.schematools.core.utils.StringUtils.toSingular;
 
 /**
  * Generates an OpenAPI Specification from a BrAPI JSON Schema.
@@ -143,26 +146,18 @@ public class OpenAPIGenerator {
 
     }
 
-    @SuppressWarnings("unchecked")
     private static class Generator {
         private final OpenAPIGeneratorOptions options;
 
         private final OpenAPIGeneratorMetadata metadata;
         private final BrAPIClassCacheBuilder.BrAPIClassCache brAPIClassCache;
 
-        // Initial snapshot loaded from components — treated as read-only after construction
-        private final Map<String, Parameter> initialParameters;
-        private final Map<String, ApiResponse> initialResponses;
-        private final Map<String, Schema<?>> initialSchemas;
-        private final Map<String, SecurityScheme> initialSecuritySchemes;
+        private final Map<String, Parameter> parameters;
+        private final Map<String, ApiResponse> responses;
+        private final Map<String, Schema> schemas;
+        private final Map<String, SecurityScheme> securitySchemes;
 
-        // Working maps reset before each module generation
-        private Map<String, Parameter> parameters;
-        private Map<String, ApiResponse> responses;
-        private Map<String, Schema<?>> schemas;
-        private Map<String, SecurityScheme> securitySchemes;
-
-        private Set<String> referencedSchemas;
+        private final Set<String> referencedSchemas;
         private boolean versionIs3_1_OrLater = false;
 
         public Generator(OpenAPIGeneratorOptions options, OpenAPIGeneratorMetadata metadata, List<BrAPIClass> brAPIClasses, Components components) {
@@ -173,53 +168,50 @@ public class OpenAPIGenerator {
 
             // Cache all the generic components (TODO generate these instead of reading from a directory)
             if (components.getParameters() != null) {
-                this.initialParameters = Collections.unmodifiableMap(new HashMap<>(components.getParameters()));
+                this.parameters = new HashMap<>(components.getParameters());
             } else {
-                this.initialParameters = Collections.emptyMap();
+                this.parameters = new HashMap<>();
             }
 
             if (components.getResponses() != null) {
-                this.initialResponses = Collections.unmodifiableMap(new HashMap<>(components.getResponses()));
+                this.responses = new HashMap<>(components.getResponses());
             } else {
-                this.initialResponses = Collections.emptyMap();
+                this.responses = new HashMap<>();
             }
 
             if (components.getSchemas() != null) {
-                this.initialSchemas = Collections.unmodifiableMap(new HashMap<>((Map<String, Schema<?>>)(Map<?,?>) components.getSchemas()));
+                this.schemas = new HashMap<>(components.getSchemas());
             } else {
-                this.initialSchemas = Collections.emptyMap();
+                this.schemas = new HashMap<>();
             }
 
             if (components.getSecuritySchemes() != null) {
-                this.initialSecuritySchemes = Collections.unmodifiableMap(new HashMap<>(components.getSecuritySchemes()));
+                this.securitySchemes = new HashMap<>(components.getSecuritySchemes());
             } else {
-                this.initialSecuritySchemes = Collections.emptyMap();
+                this.securitySchemes = new HashMap<>();
             }
 
-            // Initialize working maps from the initial snapshots
-            resetPerModuleState();
-        }
-
-        /** Reset the working maps before generating each module, so modules don't bleed into each other. */
-        private void resetPerModuleState() {
-            this.parameters = new HashMap<>(initialParameters);
-            this.responses = new HashMap<>(initialResponses);
-            this.schemas = new HashMap<>(initialSchemas);
-            this.securitySchemes = new HashMap<>(initialSecuritySchemes);
+            // maintain a list of schemas that have been referenced elsewhere, but not yet generated
             this.referencedSchemas = new TreeSet<>();
         }
 
         public Response<List<OpenAPI>> generate() {
-            return generateSpecifications(brAPIClassCache.getBrAPIClasses());
+            return options.validateAgainstCache(brAPIClassCache)
+                .asResponse()
+                .map(() -> generateSpecifications(brAPIClassCache.getBrAPIClasses()));
         }
 
         public Response<List<OpenAPI>> generate(Collection<String> classNames) {
             if (classNames != null && !classNames.isEmpty()) {
                 Collection<BrAPIClass> values = brAPIClassCache.getBrAPIClasses().stream().filter(brAPIClass -> classNames.contains(brAPIClass.getName())).collect(Collectors.toSet());
 
-                return generateSpecifications(values);
+                return options.validateAgainstCache(brAPIClassCache)
+                    .asResponse()
+                    .map(() -> generateSpecifications(values));
             } else {
-                return generateSpecifications(brAPIClassCache.getBrAPIClasses());
+                return options.validateAgainstCache(brAPIClassCache)
+                    .asResponse()
+                    .map(() -> generateSpecifications(brAPIClassCache.getBrAPIClasses()));
             }
         }
 
@@ -230,31 +222,27 @@ public class OpenAPIGenerator {
                     collect(Collectors.groupingBy(BrAPIClass::getModule, toList()));
                 List<BrAPIClass> commonClasses = classesByModule.remove(BRAPI_COMMON);
 
-                Response<List<OpenAPI>> res = classesByModule.entrySet().stream().
-                    sorted(Map.Entry.comparingByKey()).
-                    map(entry -> {
+                List<BrAPIClass> classesWithNoModule = classes.stream().filter(type -> Objects.isNull(type.getModule())).toList();
+
+                return classesByModule.entrySet().stream().
+                    peek(entry -> {
                         if (commonClasses != null) {
                             entry.getValue().addAll(commonClasses);
+                            entry.getValue().addAll(classesWithNoModule);
                         }
-                        return entry;
                     }).
                     map(entry -> generateSpecifications(metadata.getTitleFor(entry.getKey()),
                         options.getSupplementalSpecificationFor(metadata.getTitleFor(entry.getKey())),
                         entry.getValue())).
                     collect(Response.toList());
-                return res;
             } else {
                 return generateSpecifications(metadata.getTitle(),
-                    options.getSupplementalSpecification(),
-                    classes.stream().filter(type -> Objects.nonNull(type.getModule())).toList()).
+                    options.getSupplementalSpecification(), classes).
                     mapResult(Collections::singletonList);
             }
         }
 
         private Response<OpenAPI> generateSpecifications(String title, String supplementalSpecPath, Collection<BrAPIClass> classes) {
-
-            // Reset per-module working state so modules don't bleed into each other
-            resetPerModuleState();
 
             OpenAPI openAPI;
             if (supplementalSpecPath != null && !supplementalSpecPath.isEmpty()) {
@@ -525,6 +513,17 @@ public class OpenAPIGenerator {
 
             operation.addTagsItem(options.getTagFor(typeWithProperty.getType()));
 
+            List<Parameter> parameters = new ArrayList<>();
+
+            if (options.getControlledVocabulary().isPagedFor(typeWithProperty.getType(), typeWithProperty.getProperty())) {
+                parameters.add(new Parameter().$ref("#/components/parameters/page"));
+                parameters.add(new Parameter().$ref("#/components/parameters/pageSize"));
+            }
+
+            parameters.add(new Parameter().$ref("#/components/parameters/authorizationHeader"));
+
+            operation.parameters(parameters);
+
             pathItem.setGet(operation);
 
             return createListApiResponses(typeWithProperty)
@@ -543,12 +542,14 @@ public class OpenAPIGenerator {
 
                 ApiResponse apiResponse = createApiResponse(name, new ObjectSchema().$ref(createSchemaRef(type.getName()))) ;
 
+                apiResponse.description("OK") ;
+
                 responses.put(name, apiResponse);
 
                 return success(apiResponse) ;
 
             } else if (type instanceof BrAPIPrimitiveType brAPIPrimitiveType) {
-                Response<Schema<?>> schemaResponse = createPrimitiveSchema(brAPIPrimitiveType);
+                Response<Schema> schemaResponse = createPrimitiveSchema(brAPIPrimitiveType);
 
                 if (schemaResponse.hasErrors()) {
                     return fail(Response.ErrorType.VALIDATION, "Can not create a Single response for type '" + type.getName() + "' due to errors: " + schemaResponse.getMessagesCombined(", "));
@@ -569,16 +570,18 @@ public class OpenAPIGenerator {
                 }
 
                 ApiResponse apiResponse = createApiResponse(name, new ObjectSchema().
-                    addProperty("data", new ArraySchema().items(new Schema<>().$ref(createSchemaRef(type.getName())))).
+                    addProperty("data", new ArraySchema().items(new Schema().$ref(createSchemaRef(type.getName())))).
                     addRequiredItem("data")
                 )  ;
+
+                apiResponse.description("OK") ;
 
                 responses.put(name, apiResponse);
 
                 return success(apiResponse) ;
 
             } else if (type instanceof BrAPIPrimitiveType brAPIPrimitiveType) {
-                Response<Schema<?>> schemaResponse = createPrimitiveSchema(brAPIPrimitiveType);
+                Response<Schema> schemaResponse = createPrimitiveSchema(brAPIPrimitiveType);
 
                 if (schemaResponse.hasErrors()) {
                     return fail(Response.ErrorType.VALIDATION, "Can not create a List response for type '" + type.getName() + "' due to errors: " + schemaResponse.getMessagesCombined(", "));
@@ -590,7 +593,7 @@ public class OpenAPIGenerator {
             }
         }
 
-        private ApiResponse createApiResponse(String title, Schema<?> schema) {
+        private ApiResponse createApiResponse(String title, Schema schema) {
             return new ApiResponse().description("OK").content(
                 new Content().addMediaType("application/json",
                     new MediaType().schema(
@@ -612,10 +615,10 @@ public class OpenAPIGenerator {
                 return success(responses.get(name));
             }
 
-            Schema<?> itemSchema ;
+            Schema itemSchema ;
 
             if (typeWithProperty.getProperty().getType() instanceof BrAPIObjectType) {
-                itemSchema = new Schema<>().$ref(createSchemaRef(typeWithProperty.getProperty().getType().getName()));
+                itemSchema = new Schema().$ref(createSchemaRef(typeWithProperty.getProperty().getType().getName()));
             } else {
                 itemSchema = createSchemaForType(typeWithProperty.getProperty().getType()).getResultOrThrow() ;
             }
@@ -672,8 +675,7 @@ public class OpenAPIGenerator {
             List<Parameter> parameters = new ArrayList<>();
 
             if (type.getProperties().stream().anyMatch(property -> property.getName().equals("externalReferences"))) {
-                parameters.add(new Parameter().$ref("#/components/parameters/externalReferenceID"));
-                parameters.add(new Parameter().$ref("#/components/parameters/externalReferenceId")); // TODO depreciated, remove?
+                parameters.add(new Parameter().$ref("#/components/parameters/externalReferenceId"));
                 parameters.add(new Parameter().$ref("#/components/parameters/externalReferenceSource"));
             }
 
@@ -688,9 +690,8 @@ public class OpenAPIGenerator {
 
             parameters.add(new Parameter().$ref("#/components/parameters/authorizationHeader"));
 
-
             if (options.getListGet().hasInputFor(type)) {
-                BrAPIClass requestClass = brAPIClassCache.getBrAPIClass(String.format("%sRequest", type.getName()));
+                BrAPIClass requestClass = brAPIClassCache.getBrAPIRequestClass(type);
 
                 if (requestClass == null) {
                     return fail(Response.ErrorType.VALIDATION, String.format("Can not find '%sRequest' to create properties for list get endpoint for '%s'", type.getName(), createPathItemName(type)));
@@ -727,7 +728,7 @@ public class OpenAPIGenerator {
             parameters.add(new Parameter().$ref("#/components/parameters/authorizationHeader"));
 
             if (options.getListGet().hasInputFor(type)) {
-                BrAPIClass requestClass = brAPIClassCache.getBrAPIClass(String.format("%sRequest", type.getName()));
+                BrAPIClass requestClass = brAPIClassCache.getBrAPIRequestClass(type) ;
 
                 if (requestClass instanceof BrAPIObjectType brAPIObjectType) {
                     List<String> subQueryProperties = requestClass.getMetadata() != null && requestClass.getMetadata().getSubQueryProperties() != null ? requestClass.getMetadata().getSubQueryProperties() : new ArrayList<>() ;
@@ -754,7 +755,7 @@ public class OpenAPIGenerator {
                     schema(upwrapSchema(schema)));
         }
 
-        private Schema<?> upwrapSchema(Schema<?> schema) {
+        private Schema upwrapSchema(Schema schema) {
             if (schema instanceof ArraySchema) {
                 return schema.getItems();
             } else {
@@ -776,7 +777,7 @@ public class OpenAPIGenerator {
         private Response<Operation> getOperationResponse(BrAPIObjectType type, Operation operation) {
             String requestBodyName = options.isGeneratingNewRequestFor(type) ? options.getNewRequestNameFor(type) : type.getName();
 
-            operation.requestBody(createRequestBody(new ArraySchema().$ref(String.format("#/components/schemas/%s", requestBodyName))));
+            operation.requestBody(createRequestBody(new ArraySchema().items(new Schema().$ref(String.format("#/components/schemas/%s", requestBodyName)))));
 
             operation.addTagsItem(options.getTagFor(type));
 
@@ -791,9 +792,13 @@ public class OpenAPIGenerator {
             operation.setSummary(metadata.getSingleGet().getSummaryOrDefault(type.getName(), options.getSingleGet().getSummaryFor(type)));
             operation.setDescription(metadata.getSingleGet().getDescriptionOrDefault(type.getName(), options.getSingleGet().getDescriptionFor(type)));
 
+            operation.addParametersItem(new Parameter().$ref("#/components/parameters/authorizationHeader"));
+
             operation.addTagsItem(options.getTagFor(type));
 
-            return createSingleApiResponses(type)
+            return createIdGetParameterFor(type)
+                .onSuccessDoWithResult(operation::addParametersItem)
+                .map(() -> createSingleApiResponses(type))
                 .onSuccessDoWithResult(operation::responses)
                 .map(() -> success(operation));
         }
@@ -808,11 +813,13 @@ public class OpenAPIGenerator {
 
             String requestBodyName = options.isGeneratingNewRequestFor(type) ? options.getNewRequestNameFor(type) : type.getName();
 
-            operation.requestBody(createRequestBody(new Schema<>().$ref(String.format("#/components/schemas/%s", requestBodyName))));
+            operation.requestBody(createRequestBody(new Schema().$ref(String.format("#/components/schemas/%s", requestBodyName))));
 
             operation.addTagsItem(options.getTagFor(type));
 
-            return createSingleApiResponses(type)
+            return createIdGetParameterFor(type)
+                .onSuccessDoWithResult(operation::addParametersItem)
+                .map(() -> createSingleApiResponses(type))
                 .onSuccessDoWithResult(operation::responses)
                 .map(() -> success(operation));
         }
@@ -838,7 +845,9 @@ public class OpenAPIGenerator {
 
             operation.addTagsItem(options.getTagFor(type));
 
-            return createSingleApiResponses(type)
+            return createIdGetParameterFor(type)
+                .onSuccessDoWithResult(operation::addParametersItem)
+                .map(() -> createSingleApiResponses(type))
                 .onSuccessDoWithResult(operation::responses)
                 .map(() -> success(operation));
         }
@@ -849,7 +858,26 @@ public class OpenAPIGenerator {
             operation.setSummary(metadata.getSingleGet().getSummaryOrDefault(type.getName(), options.getSingleGet().getSummaryFor(type)));
             operation.setDescription(metadata.getSingleGet().getDescriptionOrDefault(type.getName(), options.getSingleGet().getDescriptionFor(type)));
 
-            operation.addParametersItem(new Parameter().$ref("#/components/parameters/authorizationHeader"));
+            List<Parameter> parameters = new ArrayList<>();
+
+            if (options.getListGet().hasInputFor(type) && type instanceof BrAPIObjectType brAPIObjectType) {
+                BrAPIClass requestClass = brAPIClassCache.getBrAPIRequestClass(brAPIObjectType) ;
+
+                if (requestClass instanceof BrAPIObjectType requestObjectType) {
+                    List<String> subQueryProperties = requestClass.getMetadata() != null && requestClass.getMetadata().getSubQueryProperties() != null ? requestClass.getMetadata().getSubQueryProperties() : new ArrayList<>() ;
+
+                    requestObjectType.getProperties().stream()
+                        .filter(property -> subQueryProperties.contains(property.getName()))
+                        .map(this::createListGetParameter)
+                        .collect(Response.toList())
+                        .onSuccessDoWithResult(result -> parameters.addAll(0, result))
+                        .map(() -> success(parameters));
+                }
+            }
+
+            parameters.add(new Parameter().$ref("#/components/parameters/authorizationHeader"));
+
+            operation.parameters(parameters);
 
             operation.addTagsItem(options.getTagFor(parentType));
 
@@ -960,13 +988,14 @@ public class OpenAPIGenerator {
         private Response<ApiResponses> createSingleApiResponses(BrAPIType type) {
             if (type instanceof BrAPIObjectType) {
                 return success(addStandardApiResponses(new ApiResponses()
-                    .addApiResponse("200", new ApiResponse().$ref(String.format("#/components/responses/%sSingleResponse", type.getName())))));
+                    .addApiResponse("200", new ApiResponse().$ref(String.format("#/components/responses/%sSingleResponse", type.getName()))))
+                    .addApiResponse("404", new ApiResponse().$ref("#/components/responses/404NotFound")));
             } else {
                 return fail(Response.ErrorType.VALIDATION, String.format("Can not create a List API Response for '%s' which is a '%s'", type.getName(), type.getClass().getSimpleName()));
             }
         }
 
-        private RequestBody createRequestBody(Schema<?> schema) {
+        private RequestBody createRequestBody(Schema schema) {
             return new RequestBody().content(
                 new Content().addMediaType("application/json",
                     new MediaType().schema(schema)));
@@ -1005,6 +1034,10 @@ public class OpenAPIGenerator {
             operation.setSummary(metadata.getSearch().getSummaryOrDefault(type.getName(), options.getSearch().getSummaryFor(type)));
             operation.setDescription(metadata.getSearch().getDescriptionOrDefault(type.getName(), options.getSearch().getSubmitDescriptionFormat(type)));
 
+            operation.addParametersItem(new Parameter().$ref("#/components/parameters/authorizationHeader"));
+
+            operation.requestBody(createRequestBody(new Schema().$ref(String.format("#/components/schemas/%s", options.getSearchRequestNameFor(type)))));
+
             operation.responses(createSearchPostResponseRefs(type));
             operation.addTagsItem(options.getTagFor(type));
 
@@ -1029,6 +1062,24 @@ public class OpenAPIGenerator {
 
             operation.responses(createSearchGetResponseRefs(type));
             operation.addTagsItem(options.getTagFor(type));
+
+            List<Parameter> parameters = new ArrayList<>();
+
+            parameters.add(new Parameter().
+                name(options.getSearch().getSearchIdFieldName()).
+                in("path").
+                description(options.getSearch().getSearchIdFieldName()).
+                required(true).
+                schema(new StringSchema()));
+
+            if (options.getSearch().isPagedFor(type)) {
+                parameters.add(new Parameter().$ref("#/components/parameters/page"));
+                parameters.add(new Parameter().$ref("#/components/parameters/pageSize"));
+            }
+
+            parameters.add(new Parameter().$ref("#/components/parameters/authorizationHeader"));
+
+            operation.parameters(parameters);
 
             pathItem.setGet(operation);
 
@@ -1057,7 +1108,7 @@ public class OpenAPIGenerator {
             }
 
             return generateSchemas(primaryTypes, nonPrimaryTypes)
-                .onSuccessDoWithResult(schemaMap -> mergeComponents((Map<String, Schema<?>>)(Map<?,?>) components.getSchemas(), schemaMap))
+                .onSuccessDoWithResult(schemaMap -> mergeComponents(components.getSchemas(), schemaMap))
                 .merge(this::generateResponses)
                 .onSuccessDoWithResult(responsesMap -> mergeComponents(components.getResponses(), responsesMap))
                 .merge(this::generateParameters)
@@ -1066,7 +1117,7 @@ public class OpenAPIGenerator {
                 .onSuccessDoWithResult(securityMap -> mergeComponents(components.getSecuritySchemes(), securityMap))
                 .merge(() -> processReferencedSchemas(primaryTypes, nonPrimaryTypes))
                 .mapResultToResponse(this::generateSchemas)
-                .onSuccessDoWithResult(referencedSchemasMap -> mergeComponents((Map<String, Schema<?>>)(Map<?,?>) components.getSchemas(), referencedSchemasMap))
+                .onSuccessDoWithResult(referencedSchemasMap -> mergeComponents(components.getSchemas(), referencedSchemasMap))
                 .map(() -> success(components));
         }
 
@@ -1077,8 +1128,8 @@ public class OpenAPIGenerator {
             return existingComponents;
         }
 
-        private Response<Map<String, Schema<?>>> generateSchemas(Collection<BrAPIObjectType> primaryTypes, Collection<BrAPIClass> nonPrimaryTypes) {
-            Map<String, Schema<?>> schemas = new TreeMap<>();
+        private Response<Map<String, Schema>> generateSchemas(Collection<BrAPIObjectType> primaryTypes, Collection<BrAPIClass> nonPrimaryTypes) {
+            Map<String, Schema> schemas = new TreeMap<>();
 
             return primaryTypes.stream().map(type -> generateSchemasForType(type).onSuccessDoWithResult(schemas::putAll)).collect(Response.toList()).
                 merge(nonPrimaryTypes.stream().map(type -> createSchemaForType(type).onSuccessDoWithResult(schema -> schemas.put(type.getName(), schema))).collect(Response.toList())).
@@ -1086,10 +1137,10 @@ public class OpenAPIGenerator {
                 map(() -> success(schemas));
         }
 
-        private Response<Map<String, Schema<?>>> generateSchemas(List<BrAPIClass> types) {
-            Map<String, Schema<?>> schemas = new TreeMap<>();
+        private Response<Map<String, Schema>> generateSchemas(List<BrAPIClass> types) {
+            Map<String, Schema> schemas = new TreeMap<>();
 
-            Response<Map<String, Schema<?>>> response = types.stream()
+            Response<Map<String, Schema>> response = types.stream()
                 .map(type -> createSchemaForType(type).onSuccessDoWithResult(schema -> schemas.put(type.getName(), schema))).collect(Response.toList())
                 .onSuccessDo(() -> schemas.putAll(this.schemas))
                 .map(() -> success(schemas));
@@ -1097,9 +1148,9 @@ public class OpenAPIGenerator {
             return response;
         }
 
-        private Response<Map<String, Schema<?>>> generateSchemasForType(BrAPIObjectType type) {
+        private Response<Map<String, Schema>> generateSchemasForType(BrAPIObjectType type) {
 
-            Map<String, Schema<?>> schemas = new TreeMap<>();
+            Map<String, Schema> schemas = new TreeMap<>();
 
             boolean creatingNewRequest = options.isGeneratingNewRequestFor(type);
 
@@ -1120,14 +1171,14 @@ public class OpenAPIGenerator {
          * @param creatingNewRequest {@code true} if there will be a separate new request schema created
          * @return the base schema for a type
          */
-        private Response<Schema<?>> createSchemaForType(BrAPIObjectType type, boolean creatingNewRequest) {
+        private Response<Schema> createSchemaForType(BrAPIObjectType type, boolean creatingNewRequest) {
             String idParameter = options.getProperties().getIdPropertyNameFor(type);
 
             if (creatingNewRequest) {
                 Optional<BrAPIObjectProperty> idParameterOptional = type.getProperties().stream().filter(property -> property.getName().equals(idParameter)).findFirst();
                 
                 if (idParameterOptional.isPresent()) {
-                    Schema<?> schema = new Schema<>();
+                    Schema schema = new Schema();
                     return createReferenceSchema(options.getNewRequestNameFor(type))
                         .onSuccessDoWithResult(schema::addAllOfItem)
                         .map(() -> createObjectSchema(type, List.of(idParameterOptional.get())))
@@ -1143,7 +1194,7 @@ public class OpenAPIGenerator {
             }
         }
 
-        private void addRequiredItem(Schema<?> schema, String parameter) {
+        private void addRequiredItem(Schema schema, String parameter) {
             if (schema.getRequired() != null && !schema.getRequired().contains(parameter)) {
                 schema.addRequiredItem(parameter) ;
             }
@@ -1156,7 +1207,7 @@ public class OpenAPIGenerator {
          * @param type The BrAPI Object type to start from
          * @return the New Request schema for a type
          */
-        private Response<Schema<?>> createNewRequestSchemaForType(BrAPIObjectType type) {
+        private Response<Schema> createNewRequestSchemaForType(BrAPIObjectType type) {
             String idParameter = options.getProperties().getIdPropertyNameFor(type);
 
             if (type.getProperties().stream().noneMatch(property -> property.getName().equals(idParameter))) {
@@ -1167,9 +1218,8 @@ public class OpenAPIGenerator {
                 type.getProperties().stream().filter(brAPIObjectProperty -> !brAPIObjectProperty.getName().equals(idParameter)).toList()) ;
         }
 
-        @SuppressWarnings("rawtypes")
-        private Response<Schema<?>> createSearchRequestSchemaForType(BrAPIObjectType type) {
-            BrAPIClass requestSchema = brAPIClassCache.getBrAPIClass(String.format("%sRequest", type.getName()));
+        private Response<Schema> createSearchRequestSchemaForType(BrAPIObjectType type) {
+            BrAPIClass requestSchema = brAPIClassCache.getBrAPIRequestClass(type);
 
             String name = options.getSearchRequestNameFor(type);
 
@@ -1178,14 +1228,15 @@ public class OpenAPIGenerator {
             }
 
             if (requestSchema instanceof BrAPIObjectType brAPIObjectType) {
-                Schema<?> objectSchema = new ObjectSchema()
+                Schema objectSchema = new ObjectSchema()
                     .name(type.getName())
                     .description(type.getDescription());
 
                 updateExamples(objectSchema, brAPIObjectType);
 
                 return createProperties(objectSchema, type, brAPIObjectType.getProperties().stream().toList())
-                    .mapResult(properties -> (Schema<?>) objectSchema.properties((Map<String, Schema>) (Map<?,?>) properties));
+                    .mapResult(properties -> properties.entrySet().stream().filter(entry -> options.getSearch().isUsingPropertyFromRequestFor(type.getName(), entry.getKey())).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)))
+                    .mapResult(properties -> objectSchema.properties(properties));
             } else {
                 return fail(Response.ErrorType.VALIDATION, String.format("'%sRequest' must be BrAPIObjectType but was '%s'", type.getName(), type.getClass().getSimpleName()));
             }
@@ -1203,7 +1254,7 @@ public class OpenAPIGenerator {
             return success(securitySchemes);
         }
 
-        private Response<Schema<?>> createSchemaForType(BrAPIType type) {
+        private Response<Schema> createSchemaForType(BrAPIType type) {
 
             if (type instanceof BrAPIObjectType) {
                 return createObjectSchema((BrAPIObjectType) type);
@@ -1222,31 +1273,30 @@ public class OpenAPIGenerator {
             }
         }
 
-        private Response<Schema<?>> createObjectSchema(BrAPIObjectType type) {
+        private Response<Schema> createObjectSchema(BrAPIObjectType type) {
             return createObjectSchema(type, type.getProperties());
         }
 
-        @SuppressWarnings("rawtypes")
-        private Response<Schema<?>> createObjectSchema(BrAPIObjectType type, List<BrAPIObjectProperty> properties) {
-            Schema<?> objectSchema = new ObjectSchema()
+        private Response<Schema> createObjectSchema(BrAPIObjectType type, List<BrAPIObjectProperty> properties) {
+            Schema objectSchema = new ObjectSchema()
                 .name(type.getName())
                 .description(type.getDescription());
 
             updateExamples(objectSchema, type) ;
 
             return createProperties(objectSchema, type, properties)
-                .mapResult(schema -> (Schema<?>) objectSchema.properties((Map<String, Schema>) (Map<?,?>) schema));
+                .mapResult(schema -> objectSchema.properties(schema));
         }
 
-        private Response<Map<String, Schema<?>>> createProperties(Schema<?> objectSchema, BrAPIObjectType parentType, List<BrAPIObjectProperty> properties) {
+        private Response<Map<String, Schema>> createProperties(Schema objectSchema, BrAPIObjectType parentType, List<BrAPIObjectProperty> properties) {
 
-            Map<String, Schema<?>> schemas = new TreeMap<>();
+            Map<String, Schema> schemas = new TreeMap<>();
 
             return properties.stream().map(property -> createProperty(objectSchema, parentType, property).onSuccessDoWithResult(schemas::putAll)).collect(Response.toList()).
                 map(() -> success(schemas));
         }
 
-        private Response<Map<String, Schema<?>>> createProperty(Schema<?> objectSchema, BrAPIObjectType parentType, BrAPIObjectProperty property) {
+        private Response<Map<String, Schema>> createProperty(Schema objectSchema, BrAPIObjectType parentType, BrAPIObjectProperty property) {
             BrAPIType unwrappedType = unwrapType(property.getType());
             BrAPIType dereferencedType = brAPIClassCache.dereferenceType(unwrappedType);
 
@@ -1254,7 +1304,7 @@ public class OpenAPIGenerator {
                 .mapResultToResponse(linkType -> createProperty(objectSchema, property, property.getType(), linkType)) ;
         }
 
-        private Response<Map<String, Schema<?>>> createProperty(Schema<?> objectSchema, BrAPIObjectProperty property, BrAPIType type, LinkType linkType) {
+        private Response<Map<String, Schema>> createProperty(Schema objectSchema, BrAPIObjectProperty property, BrAPIType type, LinkType linkType) {
             BrAPIType dereferencedType = brAPIClassCache.dereferenceType(type);
 
             if (LinkType.SUB_QUERY.equals(linkType) || LinkType.NONE.equals(linkType)) {
@@ -1293,68 +1343,64 @@ public class OpenAPIGenerator {
         }
 
 
-        private Response<Map<String, Schema<?>>> createEmbeddedProperty(Schema<?> objectSchema, BrAPIObjectProperty property, BrAPIType type) {
+        private Response<Map<String, Schema>> createEmbeddedProperty(Schema objectSchema, BrAPIObjectProperty property, BrAPIType type) {
 
             if (brAPIClassCache.containsBrAPIClass(property.getName())) {
                 return createReferenceSchema(property.getName())
                     .onSuccessDoWithResult(schema -> updateDescription(schema, property, type))
                     .onSuccessDoWithResult(schema -> updateExamples(schema, property, type))
                     .onSuccessDoWithResultOnCondition(property.isNullable(), this::makeNullable)
-                    .mapResult(schema -> Collections.singletonMap(property.getName(), (Schema<?>) schema)) ;
+                    .mapResult(schema -> Collections.singletonMap(property.getName(), schema)) ;
             }
             return createSchemaForProperty(property, type)
                 .onSuccessDoWithResult(schema -> updateDescription(schema, property, type))
                 .onSuccessDoWithResult(schema -> updateExamples(schema, property, type))
                 .onSuccessDoWithResultOnCondition(property.isNullable(), this::makeNullable)
-                .<Map<String, Schema<?>>>mapResult(schema -> Collections.singletonMap(property.getName(), schema))
+                .mapResult(schema -> Collections.singletonMap(property.getName(), schema))
                 .onSuccessDoOnCondition(property.isRequired(), () -> objectSchema.addRequiredItem(property.getName()));
         }
 
-        private Schema<?> updateDescription(Schema<?> schema, BrAPIObjectProperty property, BrAPIType type) {
+        private Schema updateDescription(Schema schema, BrAPIObjectProperty property, BrAPIType type) {
             schema.setDescription(options.getProperties().getDescriptionFor(type, property)) ;
 
             return schema ;
         }
 
-        private Schema<?> updateExamples(Schema<?> schema, BrAPIClass brAPIClass) {
+        private Schema updateExamples(Schema schema, BrAPIClass brAPIClass) {
             if (brAPIClass.getExamples() != null && !brAPIClass.getExamples().isEmpty()) {
                 if (brAPIClass.getExamples().size() == 1) {
                     schema.setExample(brAPIClass.getExamples().getFirst());
                 } else {
-                    ((Schema<Object>) schema).setExamples(brAPIClass.getExamples());
+                    schema.setExamples(brAPIClass.getExamples());
                 }
             }
 
             return schema ;
         }
 
-        private Schema<?> updateExamples(Schema<?> schema, BrAPIObjectProperty property, BrAPIType type) {
+        private Schema updateExamples(Schema schema, BrAPIObjectProperty property, BrAPIType type) {
             if (property.getExamples() != null && !property.getExamples().isEmpty()) {
                 if (property.getExamples().size() == 1) {
                     schema.setExample(property.getExamples().getFirst());
                 } else {
-                    ((Schema<Object>) schema).setExamples(property.getExamples());
+                    schema.setExamples(property.getExamples());
                 }
             }
 
             return schema ;
         }
 
-        private Schema<?> makeNullable(Schema<?> schema) {
+        private Schema makeNullable(Schema schema) {
             if (versionIs3_1_OrLater) {
                 if (schema.getType() != null) {
-                    Set<String> types = new LinkedHashSet<>();
-                    types.add("null");
-                    types.add(schema.getType());
-                    schema.setTypes(types);
+                    schema.setTypes(Set.of(schema.getType(), "null"));
                 } else {
                     if (schema.getTypes() != null) {
-                        Set<String> types = new LinkedHashSet<>();
+                        Set<String> types = new TreeSet<>(schema.getTypes());
                         types.add("null");
-                        types.addAll(schema.getTypes());
                         schema.setTypes(types);
                     } else {
-                        schema.setTypes(Collections.singleton("null"));
+                        schema.setTypes(Set.of("null"));
                     }
                 }
 
@@ -1366,7 +1412,7 @@ public class OpenAPIGenerator {
             return schema ;
         }
 
-        private Response<Map<String, Schema<?>>> createLinkedProperty(Schema<?> objectSchema, BrAPIObjectProperty property, BrAPIObjectType brAPIObjectType) {
+        private Response<Map<String, Schema>> createLinkedProperty(Schema objectSchema, BrAPIObjectProperty property, BrAPIObjectType brAPIObjectType) {
 
             List<BrAPIObjectProperty> linkProperties = options.getProperties().getLinkPropertiesFor(brAPIObjectType);
 
@@ -1385,28 +1431,28 @@ public class OpenAPIGenerator {
             }
         }
 
-        private Response<Map<String, Schema<?>>> createArrayOfIdsProperty(Schema<?> objectSchema, BrAPIObjectProperty property, BrAPIArrayType brAPIArrayType, BrAPIType itemType) {
+        private Response<Map<String, Schema>> createArrayOfIdsProperty(Schema objectSchema, BrAPIObjectProperty property, BrAPIArrayType brAPIArrayType, BrAPIType itemType) {
             return options.getProperties().getIdPropertyFor(itemType)
                 .mapResult(BrAPIObjectProperty::getType)
                 .mapResultToResponse(this::createArraySchemaForType)
                 .onSuccessDoWithResult(schema -> updateDescription(schema, property, itemType))
                 .onSuccessDoWithResultOnCondition(property.isNullable(), this::makeNullable)
-                .<Map<String, Schema<?>>>mapResult(arraySchema -> Collections.singletonMap(options.getProperties().getIdsPropertyNameFor(property), arraySchema))
+                .mapResult(arraySchema -> Collections.singletonMap(options.getProperties().getIdsPropertyNameFor(property), arraySchema))
                 .onSuccessDoOnCondition(property.isRequired(), () -> objectSchema.addRequiredItem(options.getProperties().getIdsPropertyNameFor(property)))
                 .or(() -> success(Collections.emptyMap()));
         }
 
-        private Response<Map<String, Schema<?>>> createArrayProperty(Schema<?> objectSchema, BrAPIObjectProperty property, BrAPIArrayType brAPIArrayType) {
+        private Response<Map<String, Schema>> createArrayProperty(Schema objectSchema, BrAPIObjectProperty property, BrAPIArrayType brAPIArrayType) {
             return createArraySchema(brAPIArrayType)
                 .onSuccessDoWithResult(schema -> updateDescription(schema, property, brAPIArrayType))
                 .onSuccessDoWithResultOnCondition(property.isNullable(), this::makeNullable)
-                .<Map<String, Schema<?>>>mapResult(schema -> Collections.singletonMap(property.getName(), schema))
+                .mapResult(schema -> Collections.singletonMap(property.getName(), schema))
                 .onSuccessDoOnCondition(property.isRequired(), () -> objectSchema.addRequiredItem(options.getProperties().getIdsPropertyNameFor(property)))
                 .or(() -> success(Collections.emptyMap()));
         }
 
-        private Response<Map<String, Schema<?>>> createLinkingProperties(List<BrAPIObjectProperty> linkProperties) {
-            Map<String, Schema<?>> schemas = new HashMap<>();
+        private Response<Map<String, Schema>> createLinkingProperties(List<BrAPIObjectProperty> linkProperties) {
+            Map<String, Schema> schemas = new HashMap<>();
 
             return linkProperties.stream().map(linkProperty -> createSchemaForType(linkProperty.getType())
                     .onSuccessDoWithResult(schema -> schemas.put(linkProperty.getName(), schema)))
@@ -1414,7 +1460,7 @@ public class OpenAPIGenerator {
                 .merge(() -> success(schemas));
         }
 
-        private Response<Schema<?>> createSchemaForProperty(BrAPIObjectProperty property, BrAPIType type) {
+        private Response<Schema> createSchemaForProperty(BrAPIObjectProperty property, BrAPIType type) {
             if (property.getType() instanceof BrAPIReferenceType) {
                 return createSchemaForType(property.getType());
             } else {
@@ -1422,25 +1468,25 @@ public class OpenAPIGenerator {
             }
         }
 
-        private Response<Schema<?>> createOneOfType(BrAPIOneOfType type) {
+        private Response<Schema> createOneOfType(BrAPIOneOfType type) {
             return type.getPossibleTypes().stream().map(this::createSchemaForType).collect(Response.toList()).mapResult(
-                schema -> updateExamples((Schema<?>) new Schema<>().oneOf((List<Schema>)(List<?>) schema).name(type.getName()).description(type.getDescription()), type));
+                schema -> updateExamples(new Schema().oneOf(schema).name(type.getName()).description(type.getDescription()), type));
         }
 
-        private Response<Schema<?>> createArraySchema(BrAPIArrayType type) {
+        private Response<Schema> createArraySchema(BrAPIArrayType type) {
             return createSchemaForType(type.getItems()).mapResult(schema -> new ArraySchema().items(schema));
         }
 
-        private Response<Schema<?>> createArraySchemaForType(BrAPIType type) {
+        private Response<Schema> createArraySchemaForType(BrAPIType type) {
             return createSchemaForType(type).mapResult(schema -> new ArraySchema().items(schema));
         }
 
-        private Response<Schema<?>> createReferenceSchema(BrAPIReferenceType type) {
-            return success(new Schema<>().$ref(createSchemaRef(type.getName())));
+        private Response<Schema> createReferenceSchema(BrAPIReferenceType type) {
+            return success(new Schema().$ref(createSchemaRef(type.getName())));
         }
 
-        private Response<Schema<?>> createReferenceSchema(String type) {
-            return success(new Schema<>().$ref(createSchemaRef(type)));
+        private Response<Schema> createReferenceSchema(String type) {
+            return success(new Schema().$ref(createSchemaRef(type)));
         }
 
         private String createSchemaRef(String name) {
@@ -1451,7 +1497,7 @@ public class OpenAPIGenerator {
             return String.format("#/components/schemas/%s", name);
         }
 
-        private Response<Schema<?>> createEnumSchema(BrAPIEnumType type) {
+        private Response<Schema> createEnumSchema(BrAPIEnumType type) {
             return switch (type.getType()) {
                 case BrAPIPrimitiveType.STRING -> createStringEnumSchema(type);
                 case BrAPIPrimitiveType.INTEGER -> createIntegerEnumSchema(type);
@@ -1462,7 +1508,7 @@ public class OpenAPIGenerator {
             };
         }
 
-        private Response<Schema<?>> createStringEnumSchema(BrAPIEnumType type) {
+        private Response<Schema> createStringEnumSchema(BrAPIEnumType type) {
             StringSchema schema = new StringSchema();
 
             updateSchema(type, schema);
@@ -1476,7 +1522,7 @@ public class OpenAPIGenerator {
             }
         }
 
-        private Response<Schema<?>> createIntegerEnumSchema(BrAPIEnumType type) {
+        private Response<Schema> createIntegerEnumSchema(BrAPIEnumType type) {
             IntegerSchema schema = new IntegerSchema();
 
             updateSchema(type, schema);
@@ -1490,7 +1536,7 @@ public class OpenAPIGenerator {
             }
         }
 
-        private Response<Schema<?>> createNumberEnumSchema(BrAPIEnumType type) {
+        private Response<Schema> createNumberEnumSchema(BrAPIEnumType type) {
             NumberSchema schema = new NumberSchema();
 
             updateSchema(type, schema);
@@ -1504,7 +1550,7 @@ public class OpenAPIGenerator {
             }
         }
 
-        private Response<Schema<?>> createBooleanEnumSchema(BrAPIEnumType type) {
+        private Response<Schema> createBooleanEnumSchema(BrAPIEnumType type) {
             BooleanSchema schema = new BooleanSchema();
 
             updateSchema(type, schema);
@@ -1518,7 +1564,7 @@ public class OpenAPIGenerator {
             }
         }
 
-        private Response<Schema<?>> createPrimitiveSchema(BrAPIPrimitiveType type) {
+        private Response<Schema> createPrimitiveSchema(BrAPIPrimitiveType type) {
             return switch (type.getName()) {
                 case BrAPIPrimitiveType.STRING -> success(addFormat(type, new StringSchema()));
                 case BrAPIPrimitiveType.INTEGER -> success(addFormat(type, new IntegerSchema()));
@@ -1529,7 +1575,7 @@ public class OpenAPIGenerator {
             };
         }
 
-        private Schema<?> addFormat(BrAPIPrimitiveType type, Schema<?> schema) {
+        private Schema addFormat(BrAPIPrimitiveType type, Schema schema) {
             if (type.getFormat() != null) {
                 schema.setFormat(type.getFormat());
             }
@@ -1537,7 +1583,7 @@ public class OpenAPIGenerator {
             return schema ;
         }
 
-        private Schema<?> updateSchema(BrAPIEnumType type, Schema<?> schema) {
+        private Schema updateSchema(BrAPIEnumType type, Schema schema) {
             schema.name(type.getName());
             schema.description(type.getDescription());
 
